maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:18: error: '{' expected but '}' found.
  }
  ^